unpackaged/main/default/objects/Quote_Line_Approval__c/Quote_Line_Approval__c.object-meta.xml
<CustomObject>
    <label>Quote Line Approval</label>
    <nameField>
        <displayFormat>QL-A-{00000000}</displayFormat>
        <label>Quote Line Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>