unpackaged/main/default/objects/Quote_Line_Approval__c/fields/Additionnal_Discount__c.field-meta.xml
<CustomField>
    <fullName>Additionnal_Discount__c</fullName>
    <formula>IF(ISBLANK(Quote_Line__r.SBQQ__Discount__c),TEXT(Quote_Line__r.SBQQ__AdditionalDiscountAmount__c)&amp;' '&amp;TEXT(Quote_Line__r.CurrencyIsoCode) , TEXT(Quote_Line__r.SBQQ__Discount__c*100) &amp;' %')</formula>
    <label>Additionnal Discount</label>
    <type>Text</type>
</CustomField>