unpackaged/main/default/objects/Quote_Line_Approval__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <label>Approval</label>
    <referenceTo>sbaa__Approval__c</referenceTo>
    <relationshipLabel>Quote Line Approvals</relationshipLabel>
    <relationshipName>Quote_Line_Approvals</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>