unpackaged/main/default/objects/Quote_Line_Approval__c/fields/User_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>User_Max_Discount__c</fullName>
    <formula>Quote_Line__r.Maximum_Discount_Applicable_IC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Max Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>